Fix wrong background image logic

--- a/kinoteatr/static/cinema/index.css
+++ b/kinoteatr/static/cinema/index.css
@@ -1,3 +1,9 @@
+body{
+    background-size:100%;
+    background-attachment: fixed;
+    margin:0;
+}
+
 .black-text{
     color: black!important;
 }
